<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_aboutus"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_reset"
        android:icon="@drawable/ic_changepin"
        android:title="@string/title_credentials" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/title_logout" />
    <item
        android:id="@+id/navigation_quit"
        android:icon="@drawable/ic_quit"
        android:title="@string/title_quit" />

</menu>
