<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.perfect.nbfc.bottombar.home.HomeFragment"
        android:label="@string/bank_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.perfect.nbfc.bottombar.aboutus.AboutUsFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/navigation_reset"
        android:name="com.perfect.nbfc.bottombar.resetcredentials.ResetCredentialsFragment"
        android:label="@string/title_credentials"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.perfect.nbfc.bottombar.logout.LogoutFragment"
        android:label="@string/title_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/navigation_quit"
        android:name="com.perfect.nbfc.bottombar.quit.QuitFragment"
        android:label="@string/title_quit"
        tools:layout="@layout/fragment_quit" />
</navigation>